<resources>
    <string name="app_name">wpospad</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="forget_passwd_underline"><u>忘记密码</u></string>
    <string name="register_underline"><u>前去注册</u></string>

    <string name="realname_verify">实名认证</string>
    <string name="read_and_agree">已阅读并同意</string>

    <string name="agreement_detail">《小云管家服务协议》</string>


    <string name="shop_single">个体户</string>
    <string name="shop_store">商铺</string>

    <string name="manage_staff">管理店员</string>
    <string name="basic_setting">基本设置</string>
    <string name="print_on_invoice">打印上发票</string>
    <string name="mpos">mPOS</string>
    <string name="swip_machine">刷卡器</string>
    <string name="not_bind">未绑定</string>
    <string name="yes_bind">已绑定</string>
    <string name="bind_dev">绑定设备</string>
    <string name="dev_list">设备列表</string>

    <string name="version_info_x">当前版本：%s</string>
    <string name="update_time_x">更新时间：%s</string>

    <string name="manage_pro">管理商品</string>
    <string name="add">添加</string>
    <string name="add_product">添加商品</string>
    <string name="bill_detail">交易明细</string>

    <string name="manage_category">类目管理</string>

    <string name="bat_del_sure">是否确认删除所选商品？</string>

    <string name="verify_stat_not_finish">目前尚未完成实名认证    <font color="red">查看认证进度></font></string>
    <string name="r_u_change_account">是否确认要切换账户</string>
    <string name="add_staff">添加店员</string>

    <string name="stock_hint">库存预警</string>
    <string name="share_defaut_summary">wpos 收银台不错噢快来看看</string>

    <string name="verify_status">认证进度</string>
    <string name="x_user_your_verify_status">%s 用户您好，非常感谢使用本产品\n您当前的认证进度为</string>
    <string name="income">营业款</string>
    <string name="bind_new_bandcard">绑定新卡</string>
    <string name="card_manage">卡片管理</string>
    <string name="_back">&lt;返回</string>
    <string name="choose_all">全选</string>
    <string name="choose_none">全不选</string>

    <string name="income_x">收款:%s</string>


</resources>
