<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:inmost="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="打印发票"/>
        <RadioButton
            android:id="@+id/print_invoice_rb"
            android:layout_marginLeft="20dp"
            android:button="@drawable/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_off"/>

        <TextView
            android:layout_marginLeft="110dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="扫描枪"/>
        <RadioButton
            android:id="@+id/scangun_rb"
            android:layout_marginLeft="20dp"
            android:button="@drawable/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_off"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="钱箱功能"/>
        <RadioButton
            android:id="@+id/moneybox_rb"
            android:layout_marginLeft="20dp"
            android:button="@drawable/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_off"/>

        <TextView
            android:layout_marginLeft="110dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="客户显示屏"/>
        <RadioButton
            android:id="@+id/double_screen_rb"
            android:layout_marginLeft="20dp"
            android:button="@drawable/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_off"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textColor="@color/white"
        android:text="默认刷卡设备"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <com.xingy.lib.ui.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mpos_ck"
            android:layout_gravity="center_vertical"
            inmost:checkboxImageOff="@drawable/choose_radio_off"
            inmost:checkboxImageOn="@drawable/choose_radio_on"
            inmost:text="@string/mpos"
            inmost:contentColor="@color/white"
            inmost:contentSize="24dp"/>
        <com.xingy.lib.ui.CheckBox
            android:layout_marginLeft="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swip_machine_ck"
            android:layout_gravity="center_vertical"
            inmost:checkboxImageOff="@drawable/choose_radio_off"
            inmost:checkboxImageOn="@drawable/choose_radio_on"
            inmost:text="@string/swip_machine"
            inmost:contentColor="@color/white"
            inmost:contentSize="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="mPOS状态"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textSize="24dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/btn_wpos_red"
            android:drawableLeft="@mipmap/icon_y"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/store_phone"
            android:text="@string/yes_bind"
            android:gravity="center"
            android:background="@drawable/button_red_frame_round"/>

        <TextView
            android:layout_marginLeft="110dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:text="查看所有终端mPOS >"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_wpos_red_round_rect"
        android:layout_width="450dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:textSize="30dp"
        android:id="@+id/bind_btn"
        android:textColor="@color/white"
        android:text="@string/bind_dev"/>




</LinearLayout>
