<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:inmost="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@mipmap/store_bg"
    >

    <!--导航栏-->
    <RelativeLayout
        android:id="@+id/pro_manage_nav_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.xingy.lib.ui.NavigationBar
        android:id="@+id/pro_manage_nav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        inmost:leftVisiable="true"
        inmost:drawableLeft="@drawable/ico_back"
        inmost:bgColor="@color/nav_wpos_bg"
        inmost:textColor="@color/white"/>
        <EditText
            android:textSize="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/search_input"
            android:layout_alignBottom="@id/pro_manage_nav"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="10dp"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/icon_search"
            android:background="@drawable/button_white_10round_shape"
            android:textColorHint="@color/global_text_info_color"
            android:textColor="@color/black"
            android:hint="搜索编号/名称/简称"/>
        <TextView
            android:layout_alignBottom="@id/pro_manage_nav"
            android:gravity="center"
            android:textSize="24dp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="搜索"
            android:background="@drawable/global_transparent_shadow_click_state"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/search_input"
            android:id="@+id/search_btn"/>
        <TextView
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/pro_manage_nav"
            android:gravity="center"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_product"
            android:drawablePadding="8dp"
            android:drawableLeft="@mipmap/icon_add"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:id="@+id/add_pro_btn"/>
        <TextView
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/add_pro_btn"
            android:layout_alignBottom="@id/pro_manage_nav"
            android:gravity="center"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/manage_category"
            android:drawablePadding="8dp"
            android:drawableLeft="@mipmap/icon_cate"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:id="@+id/category_btn"/>
    </RelativeLayout>

    <!--第二按钮层 -->
    <RelativeLayout
        android:id="@+id/second_btns_layout"
        android:layout_below="@id/pro_manage_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/transparent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/sort_layout"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/by_stock_opt"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="24dp"
                android:text="库存"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/icon_arrow_up"
                android:textColor="@drawable/red_gray_textcolor_selector"
                android:button="@null"
                android:background="@drawable/button_gray_frame_round_pick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/by_discount_opt"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="24dp"
                android:text="折扣"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/icon_arrow_down"
                android:textColor="@drawable/red_gray_textcolor_selector"
                android:button="@null"
                android:background="@drawable/button_gray_frame_round_pick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:layout_alignParentLeft="true"
            android:background="@color/btn_wpos_gray_dark"
            android:textColor="@color/white"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:paddingLeft="30dp"
            android:textSize="24dp"
            android:gravity="center_vertical"
            android:text="全部分类 >"
            android:id="@+id/cate_drawer_btn"/>

        <com.xingy.lib.ui.CheckBox
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/stock_hint_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            inmost:checkboxImageOff="@drawable/choose_radio_off"
            inmost:checkboxImageOn="@drawable/choose_radio_on"
            inmost:text="@string/stock_hint"
            inmost:contentColor="@color/white"
            inmost:contentSize="24dp"/>
        </RelativeLayout>

    <!--分类drawer ＋ 主体-->

    <android.support.v4.widget.DrawerLayout

        android:id="@+id/cate_list_drawer"
        android:layout_below="@id/second_btns_layout"
        android:layout_width="match_parent"
        android:background="@color/transparent"
        android:layout_height="match_parent">

        <!--main part 默认主要区域-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--title 层-->
            <RelativeLayout
                android:background="@color/btn_wpos_gray_light"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <!--默认title-->
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:id="@+id/nor_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="10dp">
                    <TextView
                      android:textColor="@color/global_text_gray"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="类别"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                        android:layout_marginLeft="5dp"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="条码编号"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                        android:layout_marginLeft="5dp"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="名称"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="简称"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="进货价"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="销售价"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                        android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="库存"/>
                    <TextView
                        android:textColor="@color/global_text_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:text="折扣"/>
                    <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:id="@+id/batch_start_btn"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:text="删除"
                    android:background="@drawable/button_wpos_orange_round_rect"/>
            </LinearLayout>
                <!--批量操作按钮-->
                <com.xingy.lib.ui.CheckBox
                    android:padding="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/pick_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    inmost:checkboxImageOff="@drawable/choose_radio_off"
                    inmost:checkboxImageOn="@drawable/choose_radio_on"
                    inmost:text="@string/choose_all"
                    inmost:contentColor="@color/global_wpos_orange"
                    inmost:contentSize="24dp"/>
                <TextView
                android:id="@+id/batch_del_btn"
                android:layout_toLeftOf="@id/pick_all_btn"
                android:gravity="center"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="删除勾选"
                android:textSize="24dp"
                android:textColor="@color/global_wpos_orange"/>
                <TextView
                android:id="@+id/batch_cancel_btn"
                android:layout_toLeftOf="@id/batch_del_btn"
                android:gravity="center"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="取消"
                android:textSize="24dp"
                android:textColor="@color/global_wpos_orange"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/no_content_hint"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:text="商品库中还没有任何商品\n请点击右上角‘添加商品’进行添加"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="30dp"
                    android:drawableTop="@mipmap/icon_upset"/>
                <android.support.v7.widget.RecyclerView
                    android:background="@color/btn_wpos_gray_light_60"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pro_list"/>

            </RelativeLayout>
        </LinearLayout>

        <ExpandableListView
            android:groupIndicator="@null"
            android:choiceMode="singleChoice"
            android:layout_gravity="left"
            android:listSelector="@drawable/none"
            android:background="@color/global_gray"
                android:id="@+id/cate_expand_list"
                android:layout_width="250dp"
                android:layout_height="match_parent" />
        </android.support.v4.widget.DrawerLayout>


    <include layout="@layout/global_loading"/>

</RelativeLayout>